--- a/classes.html
+++ b/classes.html
@@ -300,7 +300,7 @@ e-commerce tools, and emerging web technologies.
         </div>
  <div class="split" id="row6">
         <div class="segment course" id="es1">
-          <h2 class="title">AP Environmental \n Science</h2>
+          <h2 class="title">AP Environmental <br> Science</h2>
           <div class="overlay">
           <p>
           The AP Environmental Science course is designed to be the
