--- a/classes.html
+++ b/classes.html
@@ -318,7 +318,7 @@ studies, environmental science, chemistry, and geography.
         </div>
         </div>
         <div class="segment course" id="es2">
-          <h2 class="title">Environmental Systems Design</h2>
+          <h2 class="title">Environmental <br>Systems Design</h2>
           <div class="overlay">
           <p>
            Offering students engaging, project-based experiences in
@@ -347,7 +347,7 @@ and empower students to think like engineers.
         </div>
  <div class="split" id="row7">
         <div class="segment course" id="em2">
-          <h2 class="title">Principles of Manufacturing 1</h2>
+          <h2 class="title">Principles of <br>Manufacturing 1</h2>
           <div class="overlay">
           <p>
          In this course, students gain knowledge and skills in the
@@ -363,7 +363,7 @@ Special attention is given to careers involving manufacturing.
         </div>
         </div>
         <div class="segment course" id="em3">
-          <h2 class="title">Precision Manufacturing 2</h2>
+          <h2 class="title">Precision Manufacturing <br>2</h2>
           <div class="overlay">
           <p>
            Offering students engaging, project-based experiences in
@@ -437,7 +437,7 @@ healthy choices and living a productive, satisfying life.
         </div>
  <div class="split" id="row9">
         <div class="segment course" id="hs2">
-          <h2 class="title">Introduction to Sports Medicine</h2>
+          <h2 class="title">Introduction to <br> Sports Medicine</h2>
           <div class="overlay">
           <p>
           Introduction to Sports Medicine is a hands-on class
@@ -480,7 +480,7 @@ Association State Competition is a major, class activity.
         </div>
 <div class="split" id="row10">
         <div class="segment course" id="hs5">
-          <h2 class="title">Anatomy & Physiology</h2>
+          <h2 class="title">Anatomy <br> & <br> Physiology</h2>
           <div class="overlay">
           <p>
           Students are introduced to the relationship between
@@ -599,7 +599,7 @@ and evidence, and effectively communicate ideas.
         </div>
         </div>
         <div class="segment course" id="vc1">
-          <h2 class="title">Introduction to Graphic Design</h2>
+          <h2 class="title">Introduction to <br> Graphic Design</h2>
           <div class="overlay">
           <p>
             Designed for students in the Graphic Design pathway,
@@ -779,7 +779,7 @@ experience publishing the school yearbook.
         </div>
 <div class="split" id="row17">
         <div class="segment course" id="vc11">
-          <h2 class="title">AP Studio Art 2-D/3-D Design</h2>
+          <h2 class="title">AP Studio Art <br>2-D/3-D Design</h2>
           <div class="overlay">
           <p>
          The AP Studio Art classes are year-long art courses that
@@ -794,22 +794,6 @@ Art exam is taken. Portfolios are also used for entry into
 art programs at the college level. The best quality pieces
 from student portfolios can be entered into art shows and
 competitions for awards and scholorship opportunities.
-          </p>
-        </div>
-        </div>
-        <div class="segment course" id="vc0">
-          <h2 class="title">Blank</h2>
-          <div class="overlay">
-          <p>
-           Blank
-          </p>
-        </div>
-        </div>
-        <div class="segment course" id="vc00">
-          <h2 class="title">Blank</h2>
-          <div class="overlay">
-          <p>
-           Blank
           </p>
         </div>
         </div>
