--- a/classes.html
+++ b/classes.html
@@ -305,7 +305,7 @@ e-commerce tools, and emerging web technologies.
           <p>
           The AP Environmental Science course is designed to be the
 equivalent of a one-semester introductory college course
-through which students engage with the scientifi c principles,
+through which students engage with the scientific principles,
 concepts, and methodologies required to understand the
 interrelationships of the natural world. The course requires
 students identify and analyze natural and human-made
@@ -363,7 +363,7 @@ Special attention is given to careers involving manufacturing.
         </div>
         </div>
         <div class="segment course" id="em3">
-          <h2 class="title">Precision Manufacturing <br>2</h2>
+          <h2 class="title">Precision <br> Manufacturing 2</h2>
           <div class="overlay">
           <p>
            Offering students engaging, project-based experiences in
@@ -441,7 +441,7 @@ healthy choices and living a productive, satisfying life.
           <div class="overlay">
           <p>
           Introduction to Sports Medicine is a hands-on class
-exploring athletic taping and wrapping, CPR, fi rst aid, health
+exploring athletic taping and wrapping, CPR, first aid, health
 occupations, and medical terminology. Students complete
 the course with usable skills to help family and friends
 and with an understanding of health career choices.
@@ -458,7 +458,7 @@ and rehabilitation. Content includes musculoskeletal
 anatomy, injury assessment skills, as well as nutrition
 and strengthening programs and much more. Students
 prepare to learn entry-level skills in allied health careers
-associated with health, fi tness and athletic training or to
+associated with health, fitness and athletic training or to
 pursue post-high school education in related fields.
           </p>
         </div>
@@ -584,13 +584,11 @@ theory, mental disorders, and social psychology.
           <p>
            The AP Psychology course introduces students to the
 systematic and scientific study of human behavior and
-mental processes. While considering the psychologists
-and studies that have shaped the field, students explore
+mental processes. Students explore
 and apply psychological theories, key concepts, and
 phenomena associated with such topics as the biological
 bases of behavior, sensation and perception, learning and
-cognition, motivation, developmental psychology, testing
-and individual differences, treatment of abnormal behavior,
+cognition, motivation, developmental psychology,
 and social psychology. Students employ psychological
 research methods, including ethical considerations, as they
 use the scientific method, analyze bias, evaluate claims
@@ -663,10 +661,7 @@ techniques to technical and commercial art concepts.
 Instruction includes computer-assisted art and design
 using vector and raster optics, using traditional art media,
 digital imaging, communication skills, and commercial
-art business operations. Students create storyboards and
-computer models for animated and still illustrations,
-with polygons and NURBS constructions (Flash, Rhino,
-MAYA). Advanced production techniques are used to create
+art business operations. Advanced production techniques are used to create
 images for use in multimedia, print media, and web design.
 Emphasis is on layout and composition and development
 strategies for use with web, multimedia, print, and video
