--- a/projects.html
+++ b/projects.html
@@ -49,13 +49,13 @@
       <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
         <img src="img/drone.jpeg" style="width:100%">
-        <div class="text">Caption Two</div>
+        <div class="text">Jackson boasts an extremely successful FIRST Robotics team. Having competed at various competitions including the FIRST World Championship, the team, nickanmed "Jack in the Bot" is one of the largest clubs in the school. With help from community members and mentors from companies including Boeing and Microsoft, the team has been able to culture the skills they gained from CTE classes in school and apply them to each year's challenge. </div>
       </div>
 
       <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="img/shop.jpeg" style="width:100%">
-        <div class="text">Caption Three</div>
+        <img src="img/duckweed.jpg" style="width:100%">
+        <div class="text" style="color: #ffffff;">As part of the Science and Engineering Club, students conduct independent academic research using the knowledge they gained from their science and CTE courses, and compete in fairs across the country. One student, Arka Bhattacharya, is working on a unique project that uses plant material to remove toxic compounds from water. Over the course of the year, Arka conducted background research about this process-- phytoremediation-- and the science and engineering behind it. He is applying this knowledge in the form of a laboratory experiment that uses new methodology to take on the water crisis we face today in the developing world. This project involves the use of Lemna minor, a form of duckweed, as a biosorbent for accumulating the heavy metal lead from water. </div>
       </div>
 
       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
