Finished the classes and the cte page
Need to make teachers page and add more photos. Next is tsa after that

--- a/classes.html
+++ b/classes.html
@@ -48,18 +48,19 @@
         </div></a>
         <a href="#cs"><div class="tag"><h3>Computer Science</h3>
         </div></a>
-        <a href="#apes"><div class="tag"><h3>Environmental Science</h3>
+        <a href="#es"><div class="tag"><h3>Environmental Science</h3>
         </div></a>
-        <a href="#eng"><div class="tag"><h3>Engineering and Manufacturing</h3>
+        <a href="#em"><div class="tag"><h3>Engineering and Manufacturing</h3>
         </div></a>
-        <a href="#health"><div class="tag"><h3>Health Sciences</h3>
+        <a href="#hs"><div class="tag"><h3>Health Sciences</h3>
         </div></a>
-        <a href="#psych"><div class="tag"><h3>Human Services</h3>
+        <a href="#hum"><div class="tag"><h3>Human Services</h3>
         </div></a>
-        <a href="#graphic"><div class="tag"><h3>Visual Communication</h3>
+        <a href="#vc"><div class="tag"><h3>Visual Communication</h3>
         </div></a>
       </section>
       <section class="module block" id="biz">
+        <a name="biz"></a>
         <div class="split" id="row1">
         <div class="segment course" id="biz1">
           <h2 class="title">Accounting I</h2>
@@ -198,15 +199,18 @@ managed and operated by students as hands-on learning
 laboratories integrating National Curriculum Standards
 in marketing, finance, hospitality, or management. All
 students will be members of DECA and be involved in
-leadership activities.
+leadership activities.<div id="cs"><a href="cs"></a></div>
           </p>
         </div>
         </div>
         </div>
       </section>
-      <section class="module block" id="cs">
+      <section class="module block">
+
         <div class="split" id="row4">
+
         <div class="segment course" id="cs1">
+
           <h2 class="title">Exploring CS</h2>
           <div class="overlay">
           <p>
@@ -231,7 +235,7 @@ can impact the world. Along with the fundamentals of
 computing, students analyze data, information or knowledge
 represented for computational use, create technology that
 has a practical impact and gain a broader understanding
-of how computer science impacts people and society. 
+of how computer science impacts people and society.
           </p>
         </div>
         </div>
@@ -293,11 +297,12 @@ online. Course includes instruction in Internet theory, web
 page standards and policies, elements of web page design,
 user interfaces, vector tools, special effects, interactive
 and multimedia components, search engines, navigation,
-e-commerce tools, and emerging web technologies.
+e-commerce tools, and emerging web technologies.<div id="es"><a href="es"></a></div><div id="em"><a href="em"></a></div>
           </p>
         </div>
         </div>
         </div>
+
  <div class="split" id="row6">
         <div class="segment course" id="es1">
           <h2 class="title">AP Environmental <br> Science</h2>
@@ -311,9 +316,7 @@ interrelationships of the natural world. The course requires
 students identify and analyze natural and human-made
 environmental problems, evaluate the relative risks associated
 with the problems, and examine alternative solutions for
-resolving or preventing them. Environmental Science
-embraces topics from geology, biology, environmental
-studies, environmental science, chemistry, and geography.
+resolving or preventing them.
           </p>
         </div>
         </div>
@@ -381,7 +384,7 @@ incorporates environmental stewardship and advocacy.
           <div class="overlay">
           <p>
             Study of the universe, star formation and planet
-formation. Engineering projects and competitions.
+formation. Engineering projects and competitions.<div id="hs"><a href="hs"></a></div>
           </p>
         </div>
         </div>
@@ -412,8 +415,7 @@ activities are an important component of this course.
 explore the design, programming, and fabrication of
 robotics equipment and technology. Students explore
 the industry applications of robots and understand the
-implications of robotics in society. The course consists of 
-EVERETT PUBLIC SCHOOLS 55 HIGH SCHOOL COURSE CATALOG 2017/2018
+implications of robotics in society. The course consists of
 engineering, physics, electronics, mechanics, and computer
 programming principles. The design process is emphasized
 as the robots are tested and designs modifi ed. Teamwork
@@ -473,7 +475,7 @@ treatment, and rehabilitation programs and completes the
 study of major joints. Internship hours may be completed at
 off -campus sites and/or under less supervision with proven
 competence. The Washington Vocational Sports Medicine
-Association State Competition is a major, class activity.
+Association State Competition is a major, class activity.<div id="hum"><a href="hum"></a></div>
           </p>
         </div>
         </div>
@@ -489,7 +491,7 @@ systems, as well as disorders and diseases. The course
 incorporates an exploration of bioscience medical
 careers. The course includes laboratory activities,
 animal dissection, discussions, student presentations,
-individual and group research, and problem solving. 
+individual and group research, and problem solving.
           </p>
         </div>
         </div>
@@ -544,7 +546,7 @@ on child development; and external support systems.
 course which includes hands-on practice in food
 preparation techniques, kitchen safety, equipment use,
 nutrition, menu planning, leadership development,
-and careers in food related industries. 
+and careers in food related industries.
           </p>
         </div>
         </div>
@@ -559,7 +561,7 @@ foods of the United States. The class also covers cooking with
 herbs, food seasoning, sauce preparation, specialty desserts,
 as well as main dishes using pasta, cheese, dairy, and protein
 foods. Students continue to explore food related careers while
-working in a variety of individual and group lab activities
+working in a variety of individual and group lab activities<div id="vc"><a href="vc"></a></div>
           </p>
         </div>
         </div>
@@ -610,8 +612,7 @@ strong emphasis on design are presented to the student and
 include computer assisted art and design using vector and
 raster graphics, concept sketching, illustrations, traditional
 art medias, digital imaging, communication skills, and
-commercial art business operations. Students develop
-visual presentations skills and build personal portfolios.
+commercial art business operations.
           </p>
         </div>
         </div>
@@ -685,8 +686,7 @@ and practice several genres of photography including
 nature photography, action photography, and journalistic
 photography. Students learn to bring their pictures to life
 using Adobe Photoshop. Students explore career and business
-opportunities in commercial photography. Students prepare.
-traditional, hard-copy and digital electronic portfolios
+opportunities in commercial photography.
           </p>
         </div>
         </div>
@@ -767,7 +767,7 @@ meets concurrently with the Film/Video II class.
             In Publications I, students are introduced to the
 publications and desktop publishing career using industry
 standard publishing software. Students receive handson
-experience publishing the school yearbook. 
+experience publishing the school yearbook.
           </p>
         </div>
         </div>
