--- a/cte.html
+++ b/cte.html
@@ -48,10 +48,10 @@
         <a href="classes.html"><div class="segment" id='left' >
           <h2  style="color: black;">Classes</h2>
         </div></a>
-        <a href="#!"><div class="segment" id="center">
+        <a href="teachers.html"><div class="segment" id="center">
           <h2 style="color: black;">Teachers</h2>
         </div></a>
-        <a href="#!"><div class="segment" id="right">
+        <a href="projects.html"><div class="segment" id="right">
           <h2 style="color: black;">Projects</h2>
         </div></a>
 
