--- a/teachers.html
+++ b/teachers.html
@@ -45,7 +45,68 @@
         </div>
       </section>
       <section class="module content">
+        <div class="split">
+        <div class="teacher one">
+          <h1>Ms. Acheson</h1><a href="mailto:eacheson@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/469"><h3>[Website]</h3></a>
+        </div>
+        <div class="teacher one">
+          <h1>Ms. Andersen</h1><a href="mailto:mlochrie@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/989"><h3>[Website]</h3></a>
+        </div>
+        <div class="teacher one">
+          <h1>Ms. Black</h1><a href="mailto:bblack@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/938"><h3>[Website]</h3></a>
+        </div>
+        </div>
+        <div class="split">
+        <div class="teacher two">
+          <h1>Ms. Boyer</h1><a href="mailto:gbrush@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/966"><h3>[Website]</h3></a>
+        </div>
+        <div class="teacher two">
+          <h1>Ms. Cox</h1><a href="mailto:ncox@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/2554"><h3>[Website]</h3></a>
+        </div>
+        <div class="teacher two">
+          <h1>Ms. Dandridge</h1><a href="mailto:ldandridge@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/2162"><h3>[Website]</h3></a>
+        </div>
+        </div>
+        <div class="split">
+        <div class="teacher three">
+          <h1>Ms. Emery</h1><a href="mailto:memery@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/2237"><h3>[Website]</h3></a>
+        </div>
+        <div class="teacher three">
+          <h1>Mr. Geary</h1><a href="mailto:dgeary@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/947"><h3>[Website]</h3></a>
+        </div>
+        <div class="teacher three">
+          <h1>Ms. Gifford</h1><a href="mailto:rgifford@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/2161"><h3>[Website]</h3></a>
+        </div>
+        </div>
+        <div class="split">
+        <div class="teacher four">
+          <h1>Ms. Kalina</h1><a href="mailto:dkalina@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/949"><h3>[Website]</h3></a>
+        </div>
+        <div class="teacher four">
+          <h1>Mr. Kukla</h1><a href="mailto:kkukla@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/2468"><h3>[Website]</h3></a>
+        </div>
+        <div class="teacher four">
+          <h1>Ms. Nelson</h1><a href="mailto:lnelson@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/984"><h3>[Website]</h3></a>
+        </div>
+        </div>
+        <div class="split">
+        <div class="teacher five">
+          <h1>Ms. Smith</h1><a href="mailto:ksmith@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/5401"><h3>[Website]</h3></a>
+        </div>
+        <div class="teacher five">
+          <h1>Ms. Tanner</h1><a href="mailto:ctanner@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/944"><h3>[Website]</h3></a>
+        </div>
+        <div class="teacher five">
+          <h2>Ms. Thorleifson</h2><a href="mailto:mthorleifson@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/992"><h3>[Website]</h3></a>
+        </div>
+        </div>
+        <div class="split">
+        <div class="teacher six">
+          <h1>Ms. Walters</h1><a href="mailto:gwalters@everettsd.org"><h3>[Email]</h3></a><a href="http://www.everettsd.org/Domain/961"><h3>[Website]</h3></a>
+        </div>
 
+        </div>
+        </div>
       </section>
     </div>
     <script src="js/scroll.js"></script>
