progress on tsa page
will finish soon

--- a/tsa.html
+++ b/tsa.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Jackson TSA</title>
     <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/tsa.css"/>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type='text/css'>
@@ -25,5 +26,73 @@
         </nav>
       </div>
     </header>
+    <div class="pagecontent">
+      <section class="module parallax parallax-1" id="tsabkgd">
+        <div class="container">
+        </div>
+      </section>
+      <section class="module">
+        <div class="emblem"><h1>About TSA</h1></div>
+      </section>
+      <section class="module content">
+        <div class="container"><div id="desc">
+          <p>
+            TSA stands for Technology Student Association and is an organization that engages students in various aspects of technology in the form of STEM. The TSA club ranges over 49 states, with over 233,000 student participants in over 2000 schools , working together every year with parents and teachers to prove that our society has a need for technology. Members at Henry M. Jackson High School use the four qualities of learning, leadership, cooperation, and ambition to help produce projects that emphasize the necessity of technology in our everyday lives and compete using those projects.
+</p><p>
+
+TSA Members at Henry M. Jackson High School participate in a series of competitions, beginning with regionals, then state, and finally the TSA national competition. Our members work individually or in groups to produce a variety of projects ranging from science in the form of Biotechnology to engineering in the form of Structural Design.
+
+</p><p>
+
+TSA allows students with similar interests in the STEM field to come together, make new friends, and work to solve technology-related problems in an academic manner.
+
+          </p></div>
+          <img src="img/verizon.png" id="verizon">
+        </div>
+      </section>
+      <section class="module">
+        <div class="emblem"><h1>Our Values</h1></div>
+      </section>
+      <section class="module content">
+        <div id="values">
+          <p>
+            <strong>Learning: </strong>Our Chapter is all about learning. About learning life skills, about learning architecture, about learning about the Technology that makes up our everyday lives. No matter how much experience one of our members may have, he or she is embraced  learning throughout the year in our chapter. This learning has resulted in success at all levels of our TSA chapter, from minor victories to wins at the national level. In our TSA chapter, failure is a learning experience and this learning is what breeds the friendly competition.
+          </p>
+          <p>
+            <strong>Leadership: </strong>At Jackson High School TSA, we acknowledge that leading is one of the biggest aspects of every student’s future. Whether it be leading a volunteering event or family gathering, or leading a whole new company, our chapter encompasses all aspects of leadership so as to help students gain the backbone for future successes.
+          </p>
+          <p>
+            <strong>Cooperation: </strong>Cooperation is the glue that binds us all together as a chapter and as a school. An example of this is the Relay for Life event that Jackson TSA led. The idea of cooperation is taken very seriously here as we know that cooperation is a very valuable life lesson for our students, and we make sure everyone realizes this. Our emphasis on cooperation not only helps students with their TSA projects, but it also brings us closer together as a chapter.
+          </p>
+          <p>
+            <strong>Ambition: </strong>Our young competitors all have incredible ambition, which allows them to embrace the leadership and cooperation that we see so frequently. As a result of these traits, we see learning flourish and experience success whether that mean simply completing a project, or participating at nationals. It is our ambition and need for knowledge that drives our elections, and our charity events, and our recruitment. As a whole, ambition is the backbone of Jackson TSA.
+          </p>
+        </div>
+      </section>
+      <section class="module">
+        <div class="emblem"><h1>Our Leadership</h1></div>
+      </section>
+      <section class="module content">
+        <h2>Advisor</h2>
+        <p>
+          Our beloved advisor Mrs. Baker has been a long-time English teacher here at Jackson with great knowledge in the STEM field. Her excellent skills in organization and student learning has indubitably helped us become the large, yet closely-knit, TSA chapter that we are today.
+        </p>
+        <h2>Officers</h2>
+        <h3>
+          President: Claire Hsu<br>
+          Vice President: Harshu Musunuri<br>
+          Treasurer: Ryan Chu<br>
+          Secretary: On Kwon<br>
+          Reporter: Lam Pham<br>
+          Sergeant at Arms: Braden Whitman<br>
+        </h3>
+        <p>
+          Our officers play a key role in keeping our large chapter running smoothly, by holding weekly meetings, communicating with and mentoring members, and managing the budget and paperwork that goes with running a TSA Chapter.
+        </p>
+      </section>
+      <section class="module">
+        <div class="emblem"><h1>Awards</h1></div>
+      </section>
+    </div>
   </body>
 </html>
