--- a/tsa.html
+++ b/tsa.html
@@ -93,6 +93,53 @@ TSA allows students with similar interests in the STEM field to come together, m
       <section class="module">
         <div class="emblem"><h1>Awards</h1></div>
       </section>
+      <section class="module content content1">
+
+          <h2>Below is a listing of the awards Jackson students won at our most recent State Conference!</h2>
+          <div id="awards">
+          <p>
+            ARCHITECTURAL RENOVATION<br>
+TEAM<br>
+4th Karis Ho Henry M. Jackson High Team 2<br>
+4th Sriharshita Musunuri Henry M. Jackson High Team 2<br>
+4th Justine Teoh Henry M. Jackson High Team 2<br></p><p>
+BIOTECHNOLOGY DESIGN HIGH SCHOOL<br>
+TEAM<br>
+1st Karis Ho Henry M. Jackson High Team 3<br>
+1st Claire Hsu Henry M. Jackson High Team 3<br>
+1st Sriharshita Musunuri Henry M. Jackson High Team 3<br>
+1st Yuna Shin Henry M. Jackson High Team 3<br>
+1st Justine Teoh Henry M. Jackson High Team 3<br>
+3rd Kirsten Allison Henry M. Jackson High Team 1<br>
+3rd Natalia Gilbertson Henry M. Jackson High Team 1<br>
+3rd Brandon Rapp Henry M. Jackson High Team 1<br>
+3rd Andrew Stratford Henry M. Jackson High Team 1<br>
+3rd Jonathan Tan Henry M. Jackson High Team 1<br>
+3rd Serena Tran Henry M. Jackson High Team 1<br>
+4th Hannah Han Henry M. Jackson High Team 2<br>
+4th Alexis Kim Henry M. Jackson High Team 2<br>
+4th Anny Qiu Henry M. Jackson High Team 2<br></p><p>
+COMPUTER-AIDED DESIGN 2D, ARCHITECTURE<br>
+INDIVIDUAL<br>
+5th Andrew Hyun Henry M. Jackson High<br></p><p>
+DEBATING TECHNOLOGY ISSUES<br>
+TEAM<br>
+2nd Jean Kim Henry M. Jackson High Team 2<br>
+2nd Dhruvik Parikh Henry M. Jackson High Team 2<br></p><p>
+
+DIGITAL VIDEO PRODUCTION<br>
+TEAM<br>
+4th Marcus Amalachandran Henry M. Jackson High Team 1<br>
+4th Arkaprabha Bhattacharya Henry M. Jackson High Team 1<br>
+
+          </p>
+
+        </div>
+        <img src="img/people.jpeg" id="team">
+      </section>
+      <section class="module">
+        <div class="emblem"><h1>Relay for Life</h1></div>
+      </section>
     </div>
   </body>
 </html>
