--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
       </section>
 
-      <a href="#!"><div id="slide5">
+      <a href="design.html"><div id="slide5">
         <div class="container">
           <h2 style="color: #333333;">Check out our special report on Augmented Reality!</h2>
         </div>
