--- a/tsa.html
+++ b/tsa.html
@@ -34,7 +34,7 @@
       <section class="module">
         <div class="emblem"><h1>About TSA</h1></div>
       </section>
-      <section class="module content">
+      <section class="module content work">
         <div class="container"><div id="desc">
           <p>
             TSA stands for Technology Student Association and is an organization that engages students in various aspects of technology in the form of STEM. The TSA club ranges over 49 states, with over 233,000 student participants in over 2000 schools , working together every year with parents and teachers to prove that our society has a need for technology. Members at Henry M. Jackson High School use the four qualities of learning, leadership, cooperation, and ambition to help produce projects that emphasize the necessity of technology in our everyday lives and compete using those projects.
@@ -53,7 +53,7 @@ TSA allows students with similar interests in the STEM field to come together, m
       <section class="module">
         <div class="emblem"><h1>Our Values</h1></div>
       </section>
-      <section class="module content">
+      <section class="module content work">
         <div id="values">
           <p>
             <strong>Learning: </strong>Our Chapter is all about learning. About learning life skills, about learning architecture, about learning about the Technology that makes up our everyday lives. No matter how much experience one of our members may have, he or she is embraced  learning throughout the year in our chapter. This learning has resulted in success at all levels of our TSA chapter, from minor victories to wins at the national level. In our TSA chapter, failure is a learning experience and this learning is what breeds the friendly competition.
@@ -72,7 +72,7 @@ TSA allows students with similar interests in the STEM field to come together, m
       <section class="module">
         <div class="emblem"><h1>Our Leadership</h1></div>
       </section>
-      <section class="module content">
+      <section class="module content work">
         <h2>Advisor</h2>
         <p>
           Our beloved advisor Mrs. Baker has been a long-time English teacher here at Jackson with great knowledge in the STEM field. Her excellent skills in organization and student learning has indubitably helped us become the large, yet closely-knit, TSA chapter that we are today.
@@ -140,6 +140,15 @@ TEAM<br>
       <section class="module">
         <div class="emblem"><h1>Relay for Life</h1></div>
       </section>
+      <section class="module content work">
+        <div id="relay">
+          <p>
+            In 2016, Jackson TSA organized the first Relay for Life event at our high school, which turned into a community event that hundreds of people enjoyed. Throughout this experience, we learned about leadership and what it means to play a role in your community. We are excited for another great Relay for Life event this upcoming year, and increasing our attendence!
+          </p>
+          <img src="img/relay.png">
+        </div>
+      </section>
     </div>
+    <script src="js/scroll.js"></script>
   </body>
 </html>
